feat: change dependencies' endpoint to object and add options to return available filter options
