# plugins/renovate-backend/src/schema/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: renovate
   description: Backstage Renovate API
-  version: 0.1.0
+  version: 0.2.0
 servers:
   - description: local test setup
     url: http://localhost:7007
@@ -89,6 +89,11 @@ paths:
     get:
       summary: Get dependencies for host
       parameters:
+        - name: availableValues
+          in: query
+          description: if set to true, the response will include all available values for the filters
+          schema:
+            type: boolean
         - name: datasource
           in: query
           description: filter by datasource
@@ -213,9 +218,48 @@ components:
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/dependency'
+            type: object
+            required:
+              - dependencies
+            properties:
+              dependencies:
+                type: array
+                items:
+                  $ref: '#/components/schemas/dependency'
+              availableValues:
+                type: object
+                description: >
+                  Will only be part of the response if `availableValues` is true.
+                  Returns all available values for the applied filters
+                properties:
+                  datasource:
+                    type: array
+                    items:
+                      type: string
+                  depName:
+                    type: array
+                    items:
+                      type: string
+                  depType:
+                    type: array
+                    items:
+                      type: string
+                  host:
+                    type: array
+                    items:
+                      type: string
+                  manager:
+                    type: array
+                    items:
+                      type: string
+                  packageFile:
+                    type: array
+                    items:
+                      type: string
+                  repository:
+                    type: array
+                    items:
+                      type: string
 
     deleted-successful:
       description: Successful deleted
